--- a/kdx/kdx_guideline.Rmd
+++ b/kdx/kdx_guideline.Rmd
@@ -30,6 +30,9 @@ library(readxl)
 
 ## 2단계 데이터 불러오기
 - 데이터가 많아서 순차적으로 진행하도록 한다. 
+- 각 데이터에 대한 설명은`활용데이터설명(PDF)`을 참조한다. 
+![](img/project03.png)
+
 
 ### (1) 삼성카드 데이터 
 - 우선 삼성카드 데이터를 불러와서 확인한다. 
@@ -73,5 +76,30 @@ shinhancard <- shinhancard %>%
 
 head(shinhancard)
 ```
-### (3) GIN
+### (3) 지인플러스
+- 지인플러스는 아파트시세(`GIN00009A`)와 아파트 거래량(`GIN00008B`)을 담은 코드이다. 
+
+```{r}
+gin_8a <- read_csv("data/GIN00008A.csv")
+gin_9a <- read_csv("data/GIN00009A.csv")
+```
+
+- 위 두개의 데이터를 확인해본다. 
+```{r}
+glimpse(gin_8a)
+glimpse(gin_9a)
+```
+### (4) JSON 파일 불러오기
+- `JSON` 파일 불러올 때에는 `jsonlite` 패키지를 활용한다. 
+```{r}
+library(jsonlite)
+GIN_10m <- fromJSON("data/center_GIN00010M.json")
+glimpse(GIN_10m)
+```
+- `PYN_CN`의 값이 조금 다른 것을 확인할 수 있다. 
+  + 이 부분은 추후 전처리할 때 정리하는 것으로 확인한다. 
+
+### (5) SSC_Data
+- 이번에는 `Mcorporation`내 폴더 데이터를 올리도록 한다. 
+
 
