--- a/kdx/kdx_guideline.Rmd
+++ b/kdx/kdx_guideline.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 - 대회는 다음과 같다. 
   + 싸이트: [한국데이터거래소](http://lab.kdx.kr/adl/contest/main.php?fbclid=IwAR3zy6t2iutLlbxzqZ25AiVOqMuYmFuiFapfjJ246RWGdoMhBKMHYvv-WwQ)
 
+
 ![](img/project01.png)
 
 ![](img/project02.png)
@@ -25,7 +26,7 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 - 데이터 가공 및 시각화 위주의 패키지를 불러온다. 
 ```{r}
 library(tidyverse) # 데이터 가공 및 시각화
-library(readxl)
+library(readxl) # 엑셀파일 불러오기 패키지 
 ```
 
 ## 2단계 데이터 불러오기
@@ -33,6 +34,11 @@ library(readxl)
 - 각 데이터에 대한 설명은`활용데이터설명(PDF)`을 참조한다. 
 ![](img/project03.png)
 
+- 먼저 제 개발환경은 아래와 같다. 
+  + 윈도우와 Mac은 다를 수 있음을 명심하자.
+```{r}
+sessionInfo()
+```
 
 ### (1) 삼성카드 데이터 
 - 우선 삼성카드 데이터를 불러와서 확인한다. 
@@ -101,5 +107,25 @@ glimpse(GIN_10m)
 
 ### (5) SSC_Data
 - 이번에는 `Mcorporation`내 폴더 데이터를 올리도록 한다. 
+- 이번에 파일을 불러올 때는 `readr::read_csv()`를 활용하여 불러온다. 
 
+```{r}
+readr::guess_encoding("data/Mcorporation/KDX시각화경진대회_SSC_DATA.csv")
+ssc_data <- read_csv("data/Mcorporation/KDX시각화경진대회_SSC_DATA.csv", locale = locale("ko", encoding = "EUC-KR"))
+glimpse(ssc_data)
+```
+### (6) 다중 엑셀파일 불러오기 예제
+- `상품 카데고리 데이터_KDX` 시각화 폴더 내 엑셀 데이터를 확인해본다.
+
+```{r}
+list.files(path = "data/Mcorporation/상품 카테고리 데이터_KDX 시각화 경진대회 Only/")
+```
+- 몇가지 파일을 열어본다. 
+![](img/project04.png)
+<br>
+- 엑셀 데이터의 변수 등이 동일한 것을 확인할 수 있다. 
+
+## 3단계 - 과제
+- 이제 위 데이터를 한꺼번에 불러와서 하나의 데이터셋으로 합친다. 
+- 검색키워드 `Multiple Excel Files import in R`
 
