--- a/kdx/kdx_guideline.Rmd
+++ b/kdx/kdx_guideline.Rmd
@@ -124,8 +124,164 @@ list.files(path = "data/Mcorporation/상품 카테고리
 ![](img/project04.png)
 <br>
 - 엑셀 데이터의 변수 등이 동일한 것을 확인할 수 있다. 
-
-## 3단계 - 과제
 - 이제 위 데이터를 한꺼번에 불러와서 하나의 데이터셋으로 합친다. 
 - 검색키워드 `Multiple Excel Files import in R`
+```{r}
+files <- list.files(path = "data/Mcorporation/상품 카테고리 데이터_KDX 시각화 경진대회 Only/", pattern = "*.xlsx", full.names = T)
 
+products <- sapply(files, read_excel, simplify=FALSE) %>% 
+  bind_rows(.id = "id")
+
+glimpse(products)
+```
+## 3단계 데이터 시각화
+- 데이터 시각화는 변수의 종류에 따른 시각화를 구현한 것이다. 
+- 시각화 참조자료는 다음에서 작성이 가능하다. 
+  +  [Top 50 ggplot2 Visualizations - The Master List (With Full R Code)](http://r-statistics.co/Top50-Ggplot2-Visualizations-MasterList-R-Code.html)
+- 아래 샘플은 필자가 공부하는 형태를 구현한 것이다. 참조하기를 바란다. 
+
+### (1) 수치형 변수 ~ 수치형 변수
+- 수치형 변수 ~ 수치형 변수 시각화의 대표적인 기법은 산점도(`scatter`) 또는 `correlation`이라 부른다. 
+  + `scatter` 시각화를 구현한다.  
+```{r}
+# load package and data
+library(ggplot2)
+data(mpg, package="ggplot2")
+# mpg <- read.csv("http://goo.gl/uEeRGu")
+
+# Scatterplot
+theme_set(theme_bw())  # pre-set the bw theme.
+g <- ggplot(mpg, aes(cty, hwy))
+g + geom_count(col="tomato3", show.legend=F) +
+  labs(subtitle="mpg: city vs highway mileage", 
+       y="hwy", 
+       x="cty", 
+       title="Counts Plot")
+```
+
+- 위 그래프를 작성한 뒤에는 반드시 데이터의 유형을 확인한다. 
+```{r}
+class(mpg$cty); class(mpg$hwy)
+```
+- 위 작업을 하는 이유는 현재 내 데이터에서 위 데이터 유형과 비슷한 것인지 확인하기 위한 것이다. 
+  + 단 산점도를 시각화할 때 유의점이 있다. 데이터가 크기 때문에 시각화 구현에 시간이 소요된다. 
+  + 이 때 필요한 방법론이 샘플링이다. 
+```{r}
+temp_products <- sample_n(products, 1000)
+g <- ggplot(temp_products, aes(x = 구매수, y = 구매금액))
+g + geom_count(col="tomato3", show.legend=F) +
+  labs(subtitle="products: count vs revenue ", 
+       y="revenue", 
+       x="count", 
+       title="Counts Plot")
+```
+
+- 분명 동일한 시각화를 작성하였지만, 다르게 나왔다. 이럴 경우에는 `x` + `y`축에 `log Transformation`를 해준다. 
+
+```{r}
+g + 
+  geom_count(col="tomato3", show.legend=F) + 
+  scale_x_log10() + 
+  scale_y_log10() + 
+  labs(subtitle="products: count vs revenue ", 
+       y="revenue", 
+       x="count", 
+       title="Counts Plot")
+```
+- 위 그래프를 보고 해석하는 것은 수강생들이 해야 하는 업무이다. 
+
+### (2) 범주형 변수 ~ 수치형 변수
+- 대표적인 방법으로는 `boxplot`이 있다.
+- 그러나, 이번에는 카테고리명 기준으로 평균 구매금액의 평균을 구해본다. - 이번에도 마찬가지로 샘플을 보여준뒤 참조하는 형태로 작성한다. 
+```{r}
+cty_mpg <- aggregate(mpg$cty, by=list(mpg$manufacturer), FUN=mean) 
+colnames(cty_mpg) <- c("make", "mileage")  
+cty_mpg <- cty_mpg[order(cty_mpg$mileage), ]
+cty_mpg$make <- factor(cty_mpg$make, levels = cty_mpg$make) 
+head(cty_mpg, 4)
+```
+
+- 이렇게 정렬한 것을 시각화로 구현하는 것이다. 
+```{r}
+library(ggplot2)
+theme_set(theme_bw())
+
+# Draw plot
+ggplot(cty_mpg, aes(x=make, y=mileage)) + 
+  geom_bar(stat="identity", width=.5, fill="tomato3") + 
+  labs(title="Ordered Bar Chart", 
+       subtitle="Make Vs Avg. Mileage", 
+       caption="source: mpg") + 
+  theme(axis.text.x = element_text(angle=65, vjust=0.6))
+```
+
+- 이제 내 데이터에 확인해보자. 
+```r
+cat_rev <- aggregate(products$카테고리명, by=list(products$구매금액), FUN=mean) 
+```
+- 위 코드를 실행하면 속도가 굉장히 더딘 것을 확인할 수 있다. 
+- 실제로 `aggregate()` 함수는 오래 걸린다. 
+  + 그래서 `dplyr`를 활용하여 피벗테이블을 만든다. 
+
+```{r}
+library(ggplot2) 
+
+# 맥 유저만 아래 코드 적용
+theme_set(theme_classic(base_family='NanumGothic'))
+
+cat_rev <- products %>%
+  group_by(카테고리명) %>% 
+  summarise(mean = mean(구매금액)) %>% 
+  arrange(desc(mean)) 
+
+cat_rev <- cat_rev[order(cat_rev$mean, decreasing = TRUE), ]  # sort
+cat_rev$카테고리명 <- factor(cat_rev$카테고리명, levels = cat_rev$카테고리명)  # to retain the order in plot.
+
+head(cat_rev)
+```
+- 이제 위 데이터를 시각화 해본다. 
+```{r}
+ggplot(cat_rev %>% head(20), aes(x = 카테고리명, y = mean)) + 
+  geom_bar(stat="identity", width=.5, fill="tomato3") + 
+  theme(axis.text.x = element_text(angle=65, vjust=0.6)) + 
+  labs(title="Ordered Bar Chart", 
+       subtitle="카테고리명 Vs Avg. 구매금액", 
+       caption="source: products")
+```
+
+- 이번에는 카테고리명 ~ 평균 구매건수에 관한 시각화를 작성해본다. 
+- 해석은 각자 진행하고 반영하면 된다. 
+
+### (3) 위 두 그래프 확장하기 
+- 성별 및 연령대별로 추가적인 변수를 넣어 확인해보는 시각화를 만들어 본다. 
+  + 먼저 성별을 기준으로 산점도를 작성해본다. 
+```{r}
+temp_products <- sample_n(products, 1000)
+g <- ggplot(temp_products, aes(x = 구매수, y = 구매금액))
+# g + geom_count(col="tomato3", show.legend=F) +
+g + geom_point(aes(colour = 고객성별)) + 
+  scale_x_log10() + 
+  scale_y_log10() + 
+  labs(subtitle="products: count vs revenue ", 
+       y="revenue", 
+       x="count", 
+       title="Counts Plot")
+```
+
+- 상대적으로 시각화 눈에 잘 들어오지 않는다. 
+  + 이러한 경우 `facet_()` 함수 계열을 활용해본다. 
+
+```{r}
+g <- ggplot(temp_products, aes(x = 구매수, y = 구매금액))
+# g + geom_count(col="tomato3", show.legend=F) +
+g + geom_point(col="tomato3") + 
+  scale_x_log10() + 
+  scale_y_log10() + 
+  facet_grid(고객성별 ~.) + 
+  labs(subtitle="products: count vs revenue ", 
+       y="revenue", 
+       x="count", 
+       title="Counts Plot")
+```
+
+- 없음은 
