--- a/kdx/kdx_guideline.Rmd
+++ b/kdx/kdx_guideline.Rmd
@@ -390,4 +390,127 @@ category_graph(cat_rev2, category_list)
 - 이번에는 시계열 그래프를 작성한다. 
 - 마찬가지로 [Top 50 ggplot2 Visualizations - The Master List (With Full R Code)](http://r-statistics.co/Top50-Ggplot2-Visualizations-MasterList-R-Code.html)에서 시각화를 선 구현한 뒤, 본 그래프를 작성해본다. 
 
+```{r}
+library(ggplot2)
 
+# Compute % Returns
+economics$returns_perc <- c(0, diff(economics$psavert)/economics$psavert[-length(economics$psavert)])
+
+# Allow Default X Axis Labels
+ggplot(economics, aes(x=date)) + 
+  geom_line(aes(y=returns_perc)) + 
+  labs(title="Time Series Chart", 
+       subtitle="Returns Percentage from 'Economics' Dataset", 
+       caption="Source: Economics", 
+       y="Returns %")
+```
+
+<br>
+- 정상적으로 그래프가 나오기 때문에, 이번에는 데이터의 유형을 확인해본다. 
+
+```{r}
+glimpse(economics)
+```
+
+- 여기서 주목해야 하는 것은 `date`의 객체가 `date`라는 것이다.
+```{r}
+class(economics$date)
+```
+
+- 그런데, 만약 `date`의 형태가 다르면 어떻게 해야할까?
+- 그럼 변환해야 한다. 
+  + 간단한 예시로 확인한다. (기본 문법)
+```{r}
+temp_date <- "20200110"
+conv_date <- as.Date(temp_date, format = "%Y%m%d")
+print(conv_date)
+class(conv_date)
+```
+- 그런데, `%Y%m%d`는 무엇일까? 보다 쉽게 정리할 수 있는 패키지는 없을까?
+- 위 내용은 다음에서 확인한다. 
+  + [시간(날짜)형태의 변수 다루기](https://wikidocs.net/73354): 기본문법을 활용하여 날짜 데이터를 다룬다. 
+  + [R에서 깔끔하게 날짜-시간 데이터 처리하기(feat. lubridate)](https://kuduz.tistory.com/1201): `lubridate` 패키지를 활용하여 날짜 데이터를 처리할 수 있다. 
+
+- 이제 실제 데이터를 활용하여 시각화를 시계열 데이터를 똑같이 만들어 본다. 
+```{r}
+glimpse(shinhancard)
+```
+- 위 데이터에서 보는 것처럼 `일별`이 있지만, `<chr>`문자열로 기록되는 것을 확인할 수 있다. 
+- 이 데이터를 변환한다. 
+```{r}
+shinhancard$일별 <- as.Date(shinhancard$일별, format = "%Y%m%d")
+glimpse(shinhancard)
+```
+<br>
+- `<chr>`가 `<date>`로 바뀌는 것을 확인할 수 있다. 
+- 이제 코드를 그대로 불러와서 활용해본다. 
+```{r}
+# Allow Default X Axis Labels
+ggplot(shinhancard, aes(x=일별)) + 
+  geom_line(aes(y=`카드이용건수(천건)`)) + 
+  labs(title="Time Series Chart", 
+       subtitle="Returns Percentage from 'Economics' Dataset", 
+       caption="Source: Economics", 
+       y="Returns %")
+```
+
+- 이상하다, 분명 시각화를 진행했는데, 검은색의 데이터가 존재한다. 
+- 왜 그럴까?
+```{r}
+shinhancard %>% 
+  filter(일별 == "2019-01-01") %>% 
+  dim()
+```
+<br>
+- `2019년 1월 1일`에만 몰려있는 데이터가 `355`개인 셈이다. 
+- 이를 그룹화하여 평균으로 만들어 본다. 
+```{r}
+shinhancard %>% 
+  rename(date = "일별") %>% 
+  group_by(date) %>% 
+  summarise(mean = mean(`카드이용건수(천건)`)) %>% 
+  ggplot(aes(x=date)) + 
+  geom_line(aes(y=mean)) + 
+  theme(axis.text.x = element_text(angle=65, vjust=0.6)) + 
+  labs(title="Time Series Chart", 
+       subtitle="Avg. Sales from 'Shinhan Card' Dataset", 
+       caption="Source: Shinhan Card", 
+       y="Avg. Sales (1000)") + 
+  theme_bw()
+```
+<br>
+- 이번에는 그룹별로 시각화를 구현한다. 
+
+```{r}
+shinhancard %>% 
+  rename(date = "일별", gender = "성별") %>%    
+  group_by(date, gender) %>% 
+  summarise(mean = mean(`카드이용건수(천건)`)) %>% 
+  ggplot(aes(x=date)) + 
+  geom_line(aes(y=mean, colour = gender)) + 
+  labs(title="Time Series Chart", 
+       subtitle="Avg. Sales from 'Shinhan Card' Dataset", 
+       caption="Source: Shinhan Card", 
+       y="Avg. Sales (1000)")
+```
+<br>
+
+- 이번에는 연령대별로 소비패턴을 확인해보자.
+```{r}
+shinhancard %>% 
+  rename(date = "일별") %>%  
+  group_by(date, 연령대별) %>% 
+  summarise(mean = mean(`카드이용건수(천건)`)) %>% 
+  ggplot(aes(x=date)) + 
+  geom_line(aes(y=mean, colour = 연령대별)) + 
+  labs(title="Time Series Chart", 
+       subtitle="Avg. Sales from 'Shinhan Card' Dataset", 
+       caption="Source: Shinhan Card", 
+       y="Avg. Sales (1000)")
+```
+<br>
+
+- 위와 같이 그래프를 확장하면서 계속 그릴 수가 있다. 
+- 성별로 구분해서 보는 것도 도움이 되기 때문에, 이 부분은 수강생들에게 맡기도록 한다. 
+
+## 4단계 확장패키지 사용
